--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -10,7 +10,8 @@
     <a href="/">Home</a>
     <a href="/about/">About</a>
     <a href="/blog/">Blog</a>
-	
-    <h1>Astro</h1>
+
+    <h1>About Me</h1>
+    <h2>... and my new Astro site!</h2>
   </body>
 </html>
