--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,3 +1,6 @@
+---
+import '../styles/global.css';
+---
 <html lang="en">
   <head>
     <meta charset="utf-8" />
@@ -10,7 +13,7 @@
     <a href="/">Home</a>
     <a href="/about/">About</a>
     <a href="/blog/">Blog</a>
-	
+
     <h1>Astro</h1>
   </body>
 </html>
